Add impound records controller (#1552)

--- a/app/views/organized/bikes/_search.html.haml
+++ b/app/views/organized/bikes/_search.html.haml
@@ -29,27 +29,8 @@
 
 %hr{ style: "opacity: .3;" }
 
-%p.mt-4
-  - if @search_query_present || params[:search_stickers].present?
-    = t(".matching_bikes_html", bikes: pluralize(number_with_delimiter(@bikes.total_count), t(".bike")))
-  - else
-    = t(".registered_bikes_html",
-    bikes: pluralize(number_with_delimiter(@bikes.total_count), t(".bike")),
-    org_name: current_organization.short_name)
-
-  - search_params = @interpreted_params.merge(organization_id: current_organization.to_param)
-  - unless skip_view_just_stolen
-    - if @stolenness == 'all'
-      %a.float-right.organized-bikes-stolenness-toggle{ href: organization_bikes_path(search_params.merge(stolenness: 'stolen')), data: { stolenness: 'stolen' } }
-        = t(".view_just_stolen_bikes")
-    - else
-      = t(".stolen_bikes_html")
-      %a.organized-bikes-stolenness-toggle{ href: organization_bikes_path(search_params.merge(stolenness: 'all')), data: { stolenness: 'all' } }
-        = t(".view_all_bikes")
-  %a.float-right.less-strong{ href: "#organizedSearchSettings", "aria-controls" => "organizedSearchSettings", "data-toggle" => "collapse", style: "margin: 0 .5rem; color: #bbb" }
-    = t(".settings")
-
 :ruby
+  search_params = @interpreted_params.merge(organization_id: current_organization.to_param)
   # TODO: Now that we have translations, we need to localize this. I believe the easiest way to do so would be to pull the text from the header cell and use that.
   column_renames = {
     "created_at_cell" => "Registered",
@@ -78,10 +59,10 @@
                        owner_name_cell]
   default_columns += current_organization.enabled?("bike_stickers") ? ["sticker_cell"] : []
   default_columns += current_organization.additional_registration_fields.map { |f| "#{f}_cell" }
-  default_columns += ["impounded_cell"] if @impoundedness == "only_impounded"
   enabled_columns = default_columns
-  # If extra_registration_number hasn't already been enabled, add it as an optional column
+  # Some optional columns
   enabled_columns += ["extra_registration_number_cell"] unless enabled_columns.include?("extra_registration_number_cell")
+  enabled_columns += ["impounded_cell"] if current_organization.enabled?("impound_bikes")
 
 -# If the search_stickers param is set, start with the settings panel open
 .collapse#organizedSearchSettings.settings-list{ "data-defaultcols" => default_columns.to_json, class: (params[:search_stickers].present? ? "in" : "") }
@@ -102,6 +83,25 @@
         = t(".only_with_stickers_html")
       = link_to organization_bikes_path(search_params.merge(search_stickers: "none")), class: "btn btn-secondary #{@search_stickers == 'none' ? 'active' : ''}" do
         = t(".only_no_sticker_html")
+
+%p.mt-4
+  - if @search_query_present || params[:search_stickers].present?
+    = t(".matching_bikes_html", bikes: pluralize(number_with_delimiter(@bikes.total_count), t(".bike")))
+  - else
+    = t(".registered_bikes_html",
+    bikes: pluralize(number_with_delimiter(@bikes.total_count), t(".bike")),
+    org_name: current_organization.short_name)
+
+  - unless skip_view_just_stolen
+    - if @stolenness == 'all'
+      %a.float-right.organized-bikes-stolenness-toggle{ href: organization_bikes_path(search_params.merge(stolenness: 'stolen')), data: { stolenness: 'stolen' } }
+        = t(".view_just_stolen_bikes")
+    - else
+      = t(".stolen_bikes_html")
+      %a.organized-bikes-stolenness-toggle{ href: organization_bikes_path(search_params.merge(stolenness: 'all')), data: { stolenness: 'all' } }
+        = t(".view_all_bikes")
+  %a.float-right.less-strong{ href: "#organizedSearchSettings", "aria-controls" => "organizedSearchSettings", "data-toggle" => "collapse", style: "margin: 0 .5rem; color: #bbb" }
+    = t(".settings")
 
 .full-screen-table
   %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border
@@ -136,7 +136,7 @@
         %th.hiddenColumn.hidden-xs-down{ class: "extra_registration_number_cell" }
           Secondary#
         - if current_organization.enabled?("bike_stickers")
-          %th.hiddenColumn.hidden-xs-down{ class: "sticker_cell" }
+          %th.hiddenColumn.hidden-xs-down.sticker_cell
             = t(".sticker")
             - if @bike_sticker.present?
               %th
@@ -149,13 +149,12 @@
                   - if @search_stickers == "none"
                     = t(".only_not")
 
-
         / I don't know how to do this in a performant way :/
         / - if current_organization.enabled?("avery_export")
         /   %th{ class: "avery_export_cell" }
         /     Export
-        - if @impoundedness == "only_impounded"
-          %th.impounded_cell=t(".impounded")
+        - if current_organization.enabled?("impound_bikes")
+          %th.hiddenColumn.hidden-xs-down.impounded_cell=t(".impounded")
     %tbody
       - @bikes.each do |bike|
         %tr
@@ -223,10 +222,11 @@
                         = bike_sticker.code
                     - if index > 0
                       %br
-          - if @impoundedness == "only_impounded"
-            %td.impounded_cell
-              %small.convertTime
-                = l bike.current_impound_record.created_at, format: :convert_time
+          - if current_organization.enabled?("impound_bikes")
+            %td.hiddenColumn.hidden-xs-down{ class: "impounded_cell" }
+              - if bike.status_impounded? && bike.current_impound_record&.created_at&.present?
+                %small.convertTime
+                  = l bike.current_impound_record.created_at, format: :convert_time
 
 .paginate-container.paginate-container-bottom
   = paginate @bikes
