--- a/app/assets/stylesheets/revised.scss
+++ b/app/assets/stylesheets/revised.scss
@@ -415,3 +415,9 @@ $displays: none, inline, inline-block, block, table, table-row, table-cell, flex
     }
   }
 }
+
+$dev-color: #9400d3;
+.only-dev-visible {
+  border: 1px solid $dev-color;
+  background: rgba($dev-color, 0.1);
+}
