--- a/app/javascript/packs/application_css.scss
+++ b/app/javascript/packs/application_css.scss
@@ -14,6 +14,12 @@
   overflow: hidden;
 }
 
+$dev-color: #9400d3;
+.only-dev-visible {
+  border: 1px solid $dev-color;
+  background: rgba($dev-color, 0.1);
+}
+
 // General styles
 @import "../stylesheets/utils";
 @import "../stylesheets/table_extensions";
@@ -29,6 +35,7 @@
 @import "@uppy/core/dist/style.css";
 @import "@uppy/dashboard/dist/style.css";
 @import "@uppy/progress-bar/dist/style.css";
+
 // Hide uppy file upload button because it's not needed
 .uppy {
   .uppy-FileInput-btn {
