--- a/app/views/admin/organizations/edit.html.haml
+++ b/app/views/admin/organizations/edit.html.haml
@@ -9,8 +9,7 @@
     = f.fields_for :locations do |builder|
       = render '/admin/organizations/location_fields', f: builder
 
-
-    = link_to_add_fields "Add a location", f, :locations, class_name: "mx-auto"
+    = link_to_add_fields "Add a location", f, :locations, class_name: "mx-auto mt-4"
 
   .mt-4
     = f.submit "Update", class: 'btn-lg btn-success float-right'
