--- a/app/views/organized/manages/locations.html.haml
+++ b/app/views/organized/manages/locations.html.haml
@@ -5,12 +5,13 @@
   = hidden_field_tag :locations_page, true
 
   .form-group.row.locations-where-and-add{ style: "margin-top: 40px;" }
-    .col-sm-6.mt-2
-      .checkbox
-        %label
-          = f.check_box :show_on_map
-          - map_link = link_to(t(".bike_index_partner_map"), where_path, target: "_blank" )
-          = t(".display_org_on_map_html", org_name: @organization.name, map_link: map_link)
+    - unless @organization.lock_show_on_map
+      .col-sm-6.mt-2
+        .checkbox
+          = f.check_box :show_on_map # Note: This ID is called by the JS
+          = f.label :show_on_map do
+            - map_link = link_to(t(".bike_index_partner_map"), where_path, target: "_blank" )
+            = t(".display_org_on_map_html", org_name: @organization.name, map_link: map_link)
 
     .col-sm-6.text-right.mt-2
       = link_to_add_fields t(".add_location"), f, :locations, class_name: 'btn btn-secondary btn-lg'
